refactor: Redis GEO 거리 기반 커서 페이징 로직 개선
1. 동일 거리 케이스를 lastDistance + lastId 로 처리
 a. lastDistance: 마지막 응답 값의 거리
 b. lastId: 마지막 응답 값의 id
2. DB 필터링 이후 페이지 누락 문제 방지
3. Slice 리스트 수정 예외 문제 해결